err/pyscad.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pint-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/PySCAD-0.1.egg-info'...
Listing './lib/python3.5/site-packages/freetype'...
Listing './lib/python3.5/site-packages/freetype/ft_enums'...
Listing './lib/python3.5/site-packages/freetype_py-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pint'...
Listing './lib/python3.5/site-packages/pint/compat'...
Listing './lib/python3.5/site-packages/pint/testsuite'...
Listing './lib/python3.5/site-packages/pint/testsuite/compat'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scad'...
Compiling './lib/python3.5/site-packages/scad/base.py'...
***   File "./lib/python3.5/site-packages/scad/base.py", line 59
    raise TypeError, msg
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scad/color.py'...
***   File "./lib/python3.5/site-packages/scad/color.py", line 18
    raise ValueError, "Unknown color '%s'" % color
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scad/core.py'...
***   File "./lib/python3.5/site-packages/scad/core.py", line 50
    raise RuntimeError, "%s has no scad() function, implementation required"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scad/gear.py'...
***   File "./lib/python3.5/site-packages/scad/gear.py", line 55
    except NameError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scad/utils.py'...
***   File "./lib/python3.5/site-packages/scad/utils.py", line 80
    raise TypeError, "I don't know how to convert type '%s' to a unit" % str(type(val))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scad/vector.py'...
***   File "./lib/python3.5/site-packages/scad/vector.py", line 78
    raise RuntimeError, "operation not supported"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
